Added filter field tests and fixed some other tests

--- a/tests/mvc_toolbar_builder.html
+++ b/tests/mvc_toolbar_builder.html
@@ -10,6 +10,7 @@
 
 <!-- End Standard Code -->
 
+<script type="text/javascript" src="../ext_overrides.js"></script>
 <script type="text/javascript" src="../mvc_crud_controller.js"></script>
 <script type="text/javascript" src="../mvc_toolbar_builder.js"></script>
 
