--- a/tests/test_suite.html
+++ b/tests/test_suite.html
@@ -12,7 +12,7 @@ function suite() {
     // jsUnitCore.js file above.
     newsuite.addTestPage("../../tests/data_stores/suite.html");
     newsuite.addTestPage("../../tests/mvc_toolbar_builder.html");
-    newsuite.addTestPage("../../tests/mvc_datamodel.html");
+    newsuite.addTestPage("../../tests/datamodels/suite.html");
     newsuite.addTestPage("../../tests/mvc_crud_controller.html");
     newsuite.addTestPage("../../tests/mvc_dialog_editor.html");
     newsuite.addTestPage("../../tests/crud_editor.html");
