Finished improved errors reporting

--- a/tests/datamodels/datamodel.html
+++ b/tests/datamodels/datamodel.html
@@ -10,6 +10,7 @@
 
 <!-- End Standard Code -->
 
+<script type="text/javascript" src="../../ext_overrides.js"></script>
 <script type="text/javascript" src="../../error_handling.js"></script>
 <script type="text/javascript" src="../../data_stores.js"></script>
 <script type="text/javascript" src="../../mvc_data_models.js"></script>
